samples/_failures_safe/1761177418_02ea3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6543007.c: In function ‘main’:
./samples/SAFE/__tmp_f6543007.c:167:28: error: missing terminating " character
  167 |                     printf("
      |                            ^
./samples/SAFE/__tmp_f6543007.c:167:21: error: expected expression at end of input
  167 |                     printf("
      |                     ^~~~~~
./samples/SAFE/__tmp_f6543007.c:167:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6543007.c:167:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6543007.c:167:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6543007.c:167:21: error: expected declaration or statement at end of input
